# pytest-inline

./: .gitignore  LICENSE  README.md  README.rst  changelog  prepare-conda-env.sh  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: python-package.yml  python-test.yml
demo/: README.md  example.py  features.py
demo/parallel/: a.py  b.py  c.py  d.py
integration-tests/parallelization/test_files/: a.py  b.py  c.py  d.py  e.py  f.py  g.py  h.py  i.py  j.py
meeting-notes/: 10-31 Meeting Notes.txt  11-14 Meeting Notes.txt  11-7 Meeting Notes.txt
src/inline/: __about__.py  __init__.py  ast_future.py  conftest.py  inline.py  plugin.py
tests/: test_conftest.py  test_plugin.py
tests/parallelization/: time-parallel-tests.sh
tests/parallelization/test_files/: a.py  b.py  c.py  f.py  g.py  h.py  i.py  j.py
